refactor get data from user following and after get posts